--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -1,4 +1,4 @@
-/* This file is for your main application css. *//* Includes Bootstrap as well as some default style for the starter
+/* This file is for your main application css. *//* Includes Bootstrap as well as some default style for the ex_starter
  * application. This can be safely deleted to start fresh.
  */
 
