[WD-491] Allow only PDF files for layout assets and font files for theme assets wraft-docs/wraft-docs-api!88
* fix: Fixed keyerror in invoice.html

* test: Added tests

* refactor: Used describe blocks for tests in asset controller tests

* refactor: Added type field to asset

--- a/lib/wraft_doc_web/templates/api/v1/payment/invoice.html.eex
+++ b/lib/wraft_doc_web/templates/api/v1/payment/invoice.html.eex
@@ -127,7 +127,7 @@
                 <!-- <h5 style="font-size: 20px; margin: -3px; display: block; overflow: hidden; padding-left: 12px;">Duru Cooperation Private Limited</h5> -->
                 <div style="float: right; display: block; overflow: hidden; line-height: 1.6; text-align: right; padding-left: 12px; padding-top: 8px; color: #333;">
                     <div ><b>Invoice #:  <%= @invoice_number %> </b></div>
-                    <div>Date: <%= @payment.meta.created_at |> Timex.from_unix |> humanize_time %></div>
+                    <div>Date: <%= @payment.meta["created_at"] |> Timex.from_unix |> humanize_time %></div>
                 </div>
             </div>
             <div style="display: block; overflow: hidden; margin-top: 25px; margin-bottom: 25px;">
