fix: variable issue

--- a/lib/wraft_doc_web/mjml/templates/organisation_delete_code.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/organisation_delete_code.mjml.eex
@@ -19,7 +19,7 @@
   <mj-body background-color="#f9f9f9">
     <mj-section background-color="#ffffff" padding="20px 0">
       <mj-column width="100%">
-        <mj-image src="https://dev.wraft.co/Logo.svg" alt="Wraft Logo" align="center" width="120px" />
+        <mj-image src="https://dev.wraft.co/logo.png" alt="Wraft Logo" align="center" width="120px" />
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 30px">
