--- a/lib/wraft_doc_web/mjml/templates/password_set.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/password_set.mjml.eex
@@ -9,7 +9,7 @@
   <mj-body background-color="#f4f4f4">
     <mj-section background-color="#ffffff" padding="40px 20px">
       <mj-column width="100%">
-        <mj-image src="https://dev.wraft.co/Logo.svg" width="120px" align="center" />
+        <mj-image src="https://dev.wraft.co/logo.png" width="120px" align="center" />
         
         <mj-text font-size="24px" font-weight="bold" align="center" padding-top="20px">
           Set Your Password
