--- a/lib/wraft_doc_web/mjml/templates/waiting_list_join.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/waiting_list_join.mjml.eex
@@ -10,7 +10,7 @@
   <mj-body background-color="#f4f4f4">
     <mj-section background-color="#ffffff" padding="20px 0">
       <mj-column width="100%">
-        <mj-image src="https://dev.wraft.co/Logo.svg" alt="Wraft Logo" align="center" width="120px" />
+        <mj-image src="https://dev.wraft.co/logo.png" alt="Wraft Logo" align="center" width="120px" />
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 30px">
