chore: update text

--- a/lib/wraft_doc_web/mjml/templates/password_reset.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/password_reset.mjml.eex
@@ -1,6 +1,6 @@
 <mjml>
   <mj-head>
-    <mj-title>Reset Your WraftDocs Password</mj-title>
+    <mj-title>Reset Your Wraft Password</mj-title>
     <mj-font name="Arial" href="https://fonts.googleapis.com/css?family=Arial" />
     <mj-attributes>
       <mj-all font-family="Arial, sans-serif" />
@@ -11,7 +11,7 @@
   <mj-body background-color="#f4f4f4">
     <mj-section background-color="#ffffff" padding="20px 0">
       <mj-column width="100%">
-        <mj-image src="https://dev.wraft.co/logo.png" alt="WraftDocs Logo" align="center" width="120px" />
+        <mj-image src="https://dev.wraft.co/logo.png" alt="Wraft Logo" align="center" width="120px" />
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 30px">
@@ -23,7 +23,7 @@
           Dear <%= String.capitalize(@name) %>,
         </mj-text>
         <mj-text>
-          We received a request to reset your password for your WraftDocs account. If you did not make this request, please ignore this email.
+          We received a request to reset your password for your Wraft account. If you did not make this request, please ignore this email.
         </mj-text>
         <mj-text>
           To reset your password, please click the button below:
@@ -46,10 +46,10 @@
       <mj-column width="100%">
         <mj-divider border-color="#cccccc" border-width="1px" />
         <mj-text font-size="14px" color="#888888" align="center">
-          This is an automated message from WraftDocs. Please do not reply to this email.
+          This is an automated message from Wraft. Please do not reply to this email.
         </mj-text>
         <mj-text font-size="14px" color="#888888" align="center">
-          If you need assistance, please contact our support team at support@wraftdocs.com
+          If you need assistance, please contact our support team at support@wraft.co
         </mj-text>
       </mj-column>
     </mj-section>
