--- a/lib/wraft_doc_web/templates/layout/app.html.heex
+++ b/lib/wraft_doc_web/templates/layout/app.html.heex
@@ -1,8 +1,8 @@
 <main class="container">
-  <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-  <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+  <p class="alert alert-info" role="alert"><%= Phoenix.Flash.get(@flash, :info) %></p>
+  <p class="alert alert-danger" role="alert"><%= Phoenix.Flash.get(@flash, :error) %></p>
   <li style="color:DodgerBlue;text-align:right;">
-    <%=link "Sign in", to: Routes.session_path(@conn, :create) %>
+    <%= link "Sign in", to: Routes.session_path(@conn, :create) %>
   </li>
   <%= @inner_content %>
 </main>
