--- a/lib/wraft_doc_web/mjml/templates/document_instance_share.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/document_instance_share.mjml.eex
@@ -17,13 +17,13 @@
     <mj-section background-color="#ffffff" padding="20px 30px">
       <mj-column width="100%">
         <mj-text font-size="24px" color="#333333" font-weight="bold">
-          Your Document Link
+          Document Link
         </mj-text>
         <mj-text>
           Dear Sir,
         </mj-text>
         <mj-text>
-          You have been granted access to a document with <%= @instance_id %> on Wraft. To view the document, please click the button below:
+          You have been granted access to a document <%= @instance_id %> on Wraft. To view the document, please click the button below:
         </mj-text>
         <mj-button background-color="#004A0F" href="<%= @document_access_url %>" padding="20px 0">
           View Document
