chore: update Elixir and Erlang versions, adjust dependencies, and refactor code
- Updated Erlang to 27.0.1 and Elixir to 1.18.4 in .tool-versions and elixir_buildpack.config.
- Refactored mix.exs to align with new Elixir version, updating dependencies and their versions.
- Adjusted configuration in config.exs to disable deprecated warnings for Tesla.
- Refactored Gettext usage in WraftDocWeb to use the new backend approach.
- Updated error handling in template_assets and other modules for better exception management.
- Refactored array field handling in admin to improve code clarity and functionality.
- Minor adjustments in HTML templates for better readability and maintainability.

--- a/lib/wraft_doc_web/templates/api/v1/payment/invoice.html.eex
+++ b/lib/wraft_doc_web/templates/api/v1/payment/invoice.html.eex
@@ -136,8 +136,8 @@
                     #24, Caravel Building, 1st Main Rd,<br>
                     S.T. Bed, Koramangala 4th Block,<br>
                     Bengaluru, Karnataka 560095<br>
-                    <%# C.I.N : U74999KA2017PTC106639<br> %>
-                    <%# GSTIN : 29AAGCD3648A1ZT %>
+                    <%!-- C.I.N : U74999KA2017PTC106639<br> --%>
+                    <%!-- GSTIN : 29AAGCD3648A1ZT --%>
                 </div>
                 <div style="float: left; display: block; overflow: hidden; font-size: 14px; line-height: 1.5;">
                     To:<br>
