--- a/lib/wraft_doc_web/mjml/templates/document_instance_share.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/document_instance_share.mjml.eex
@@ -46,7 +46,7 @@
           This is an automated message from Wraft. Please do not reply to this email.
         </mj-text>
         <mj-text font-size="14px" color="#888888" align="center">
-          If you need assistance, please contact our support team at hello@wraft.co
+          If you need assistance, please contact our support team at <%= Application.fetch_env!(:wraft_doc, :support_email) %>
         </mj-text>
       </mj-column>
     </mj-section>
