--- a/lib/wraft_doc_web/mjml/templates/document_mail.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/document_mail.mjml.eex
@@ -39,7 +39,7 @@
           This email was sent from Wraft document automation platform.
         </mj-text>
         <mj-text font-size="14px" color="#888888" align="center">
-          If you need assistance, please contact our support team at hello@wraft.co
+          If you need assistance, please contact our support team at <%= Application.fetch_env!(:wraft_doc, :support_email) %>
         </mj-text>
       </mj-column>
     </mj-section>
