--- a/lib/wraft_doc_web/mjml/templates/password_reset.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/password_reset.mjml.eex
@@ -49,7 +49,7 @@
           This is an automated message from Wraft. Please do not reply to this email.
         </mj-text>
         <mj-text font-size="14px" color="#888888" align="center">
-          If you need assistance, please contact our support team at hello@wraft.co
+          If you need assistance, please contact our support team at <%= Application.fetch_env!(:wraft_doc, :support_email) %>
         </mj-text>
       </mj-column>
     </mj-section>
