--- a/lib/wraft_doc_web/mjml/templates/waiting_list_join.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/waiting_list_join.mjml.eex
@@ -43,7 +43,7 @@
           © 2024 Wraft. All rights reserved.
         </mj-text>
         <mj-text font-size="14px" color="#888888" align="center">
-          For support, contact us at: hello@wraft.co
+          For support, contact us at: <%= Application.fetch_env!(:wraft_doc, :support_email) %>
         </mj-text>
       </mj-column>
     </mj-section>
