--- a/lib/wraft_doc_web/mjml/templates/organisation_delete_code.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/organisation_delete_code.mjml.eex
@@ -19,7 +19,7 @@
   <mj-body background-color="#f9f9f9">
     <mj-section background-color="#ffffff" padding="20px 0">
       <mj-column width="100%">
-        <mj-image src="https://dev.wraft.co/logo.png" alt="Wraft Logo" align="center" width="120px" />
+        <mj-image src="<%= Application.fetch_env!(:wraft_doc, :email_template_logo) %>" alt="Wraft Logo" align="center" width="120px" />
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 30px">
@@ -58,7 +58,7 @@
           © 2024 Wraft. All rights reserved.
         </mj-text>
         <mj-text font-size="14px" color="#888888" align="center">
-          For support, contact us at: support@wraft.co
+          For support, contact us at: <%= Application.fetch_env!(:wraft_doc, :support_email) %>
         </mj-text>
       </mj-column>
     </mj-section>
