--- a/lib/wraft_doc_web/mjml/templates/signature_request.mjml.eex
+++ b/lib/wraft_doc_web/mjml/templates/signature_request.mjml.eex
@@ -10,7 +10,7 @@
   <mj-body background-color="#f4f4f4">
     <mj-section background-color="#ffffff" padding="20px 0">
       <mj-column width="100%">
-        <mj-image src="https://dev.wraft.co/logo.png" alt="Wraft Logo" align="center" width="120px" />
+        <mj-image src="<%= Application.fetch_env!(:wraft_doc, :email_template_logo) %>" alt="Wraft Logo" align="center" width="120px" />
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 30px">
@@ -42,7 +42,7 @@
           Thank you,<br>Wraft Document Team
         </mj-text>
         <mj-text font-size="14px" color="#888888" align="center">
-          If you need assistance, please contact our support team at support@wraft.co
+          If you need assistance, please contact our support team at <%= Application.fetch_env!(:wraft_doc, :support_email) %>
         </mj-text>
       </mj-column>
     </mj-section>
